# tree-sitter-ucode

./: CMakeLists.txt  Cargo.toml  Package.swift  README.md  go.mod  grammar.js  package.json  pyproject.toml  tree-sitter.json
bindings/go/: binding_test.go
bindings/node/: index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_ucode/: __init__.py
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterUcodeTests/: TreeSitterUcodeTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
