[package]
name = "tree-sitter-ucode"
description = "Parser for the ucode language"
version = "0.0.20250306"
authors = ["Jo-Philipp Wich <jo@mein.io>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "ucode"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/jow-/tree-sitter-ucode"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.2"
